# delta

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: launch.json
.husky/: pre-commit
docs/plans/: 2026-06-30-commit-by-commit-review.md
docs/specs/: 2026-06-30-commit-by-commit-review-design.md
docs/superpowers/: backlog.md
scripts/: build-release-dmg.sh  demo-stress.sh  demo.sh  publish-release.sh  update-cask.sh
src/: App.tsx  Home.test.tsx  Home.tsx  api.test.ts  api.ts  codeFont.ts  editor.ts  index.css  main.tsx  route.test.ts  route.ts  smoke.test.tsx  theme.ts  types.ts  vite-env.d.ts  windowMode.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  commands.rs  devbridge.rs  ipc.rs  lib.rs  main.rs
src-tauri/src/anchor/: mod.rs
src-tauri/src/export/: mod.rs
src-tauri/src/git/: diff.rs  lang.rs  log.rs  mod.rs  model.rs
src-tauri/src/launch/: mod.rs
src-tauri/src/registry/: model.rs
src-tauri/src/review/: mod.rs  model.rs  reconcile.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/walkthrough/: claude.rs  context.rs  mod.rs  model.rs  prompt.rs
src-tauri/src/watch/: mod.rs
src/components/: DeltaMark.tsx  DevBadge.tsx
src/dev/: mockBackend.ts
src/diff/: DiffFind.tsx  DiffPane.tsx  DiffView.test.tsx  DiffView.tsx  VirtualDiffPane.tsx  anchorScroll.test.ts  anchorScroll.ts  commentExtendData.test.ts  commentExtendData.ts  findSelection.test.ts  (+8 more)
(+71 files in other folders)
