[package]
name = "delta"
version = "0.1.0"
description = "A local-first desktop app for reviewing code diffs and leaving structured comments for Claude Code"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "delta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# vendored-openssl: statically link OpenSSL so signed/notarized release builds don't
# depend on Homebrew's libssl (rejected by hardened-runtime library validation -> launch crash).
git2 = { version = "0.19", features = ["vendored-openssl"] }
sha2 = "0.10"
similar = "2"
chrono = { version = "0.4", features = ["clock"] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
notify = "6"
ignore = "0.4"

[dev-dependencies]
tempfile = "3"

